Initial support for composite primary keys
Add support for DTOs that are records
Add composite primary key e2e tests